# tests/data/openapi.json
@@ -43,12 +43,17 @@
           "label": {
             "title": "Label",
             "type": "string"
+          },
+          "size": {
+            "title": "Size",
+            "type": "string"
           }
         },
         "required": [
           "id",
           "label",
-          "family"
+          "family",
+          "size"
         ],
         "title": "CatalogModelOut",
         "type": "object"
